change the image of transparent

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </a>
 </div> -->
 <div class="image-box">
-  <img src="images/carousel slide/edit1.jpg" alt="Image description">
+  <img src="images/carousel slide/edit3.jpg" alt="Image description">
   <div class="text-overlay">
     <h2 id="banner-text">Giving your child the foundation for success. Hopeshore - A trusted name in child development in Kadalundi.</h2>
     <div><br><br><br><button id="banner-button">Contact us</button></div>
@@ -99,7 +99,7 @@
 
 <!------------------------------------------------------Carousel---------------------------------------------------->
 <!-- about -->
-  <p style="background-color: #F0FFFF;">"Hopeshore Special School located at Kadalundi was founded with the noble objective of empowering the children with special needs who are sidelined from the mainstream of society"<a href="aboutus.html">more</a></p>
+  <!-- <p style="background-color: #F0FFFF;">"Hopeshore Special School located at Kadalundi was founded with the noble objective of empowering the children with special needs who are sidelined from the mainstream of society"<a href="aboutus.html">more</a></p> -->
 <!-- about -->
 <!------------------------------------------------------Cards---------------------------------------------------->
 <div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto;"> 
