again chage the photo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white" style="max-height:70px;z-index:10;">
       <a class="navbar-brand" href="index.html">
         <span id="bd-title">
-          <img src="images/Logo page.jpg" alt="Hopeshore Logo">
+          <img src="images/Logo page.jpg" alt="Hopeshore Logo"  >
         </span>
       </a>
         <button id="menu-button">&#9776;</button> 
@@ -44,7 +44,7 @@
       </nav>
       <nav class="nav2">
         <ul class="ul2">
-            <li id="one"><a href="Palm Flowers.html">Palm Flowers</a></li>
+            <li id="one"><a href="Palm Flowers.html">Products</a></li>
             <li id="two"><a href="mobiles.html">Graden Flowers</a></li>
             <li id="three"><a href="laptops.html">Sticks</a></li>
             <li id="four"><a href="#">Wall Hanging</a></li>
@@ -89,9 +89,9 @@
   </a>
 </div> -->
 <div class="image-box">
-  <img src="images/carousel slide/edit3.jpg" alt="Image description">
+  <img src="images\carousel slide\WhatsApp Image 2024-05-05 at 15.29.28_91aa7e96.jpg" alt="Image description">
   <div class="text-overlay">
-    <h2 id="banner-text">Giving your child the foundation for success. Hopeshore - A trusted name in child development in Kadalundi.</h2>
+    <h2 id="banner-text"></h2>
     <div><br><br><br><button id="banner-button">Contact us</button></div>
   </div>
 </div>
