Change footer and banner

--- a/aboutus.html
+++ b/aboutus.html
@@ -53,7 +53,7 @@
         </ul>
       </nav>
 <!------------------------------------------------------Header---------------------------------------------------->
-<h3 class="navbar-brand" href="i"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></h3>
+<h3 class="navbar-brand" href="i"><span id="bd-title"><img src="images/Logo page.jpg" style="max-height:50px;max-width: fit-content;"></span></h3>
 <p>Hopeshore Special School located at Kadalundi was founded with the noble objective 
     of empowering the children with special needs who are sidelined from the mainstream of 
     society. The school provides education and therapy to specially-abled children hailing from 
@@ -86,7 +86,7 @@
                 behavioral adaptation and health status.</p>
         </div>
         <div class="image-container">
-            <img src="images/Album/IMG_0233.JPG" alt="Image description">
+            <img src="images/Logo 2.png" alt="Hopeshore Logo" style="height: 35px;" >
             <p></p>
         </div>
     </div>
