--- a/Palm Flowers.html
+++ b/Palm Flowers.html
@@ -33,7 +33,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></a>
+        <img src="images/Logo 2.png" alt="Hopeshore Logo" style="height: 35px;" >
       </nav>
       <nav class="nav2">
         <ul class="ul2">
