chage the layout of the about us and meanu bar details

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Hopeshore.in</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font.css">
     <link rel="icon" href="images/logo.jpg">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome/css/all.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <!------------------------------------------------------Header---------------------------------------------------->
@@ -24,70 +27,22 @@
             <!--  Side menu will go here -->
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Palm Flowers.html">Palm Flowers</a></li>
-                <li><a href="#">Graden Flowers</a></li>
-                <li><a href="#">Sticks</a></li>
-                <li><a href="#">Wall Hanging</a></li>
-                <li><a href="#">Books</a></li>
-                <li><a href="#">flower basket</a></li>
-                <li><a href="#">deco rose</a></li>
-                <li><a href="#">bamboo</a></li>
-                <li><a href="#">Offer Zone</a></li>
-                <!-- <li><a href="aboutus.html">About</a></li> -->
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="Palm Flowers.html">Products</a></li>
+                <li><a href="#">Offers</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
-        <!-- <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></a> -->
-        
-        
       </nav>
       <nav class="nav2">
         <ul class="ul2">
-            <li id="one"><a href="Palm Flowers.html">Products</a></li>
-            <li id="two"><a href="mobiles.html">Graden Flowers</a></li>
-            <li id="three"><a href="laptops.html">Sticks</a></li>
-            <li id="four"><a href="#">Wall Hanging</a></li>
-            <li id="five"><a href="#">Books</a></li>
-            <li id="six"><a href="#">flower basket</a></li>
-            <li id="seven"><a href="#">deco rose</a></li>
-            <li id="eight"><a href="#">bamboo</a></li>
-            <li id="nine"><a href="#">Offer Zone</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Palm Flowers.html">Products</a></li>
+          <li><a href="#">Offers</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
         </ul>
       </nav>
 <!------------------------------------------------------Header---------------------------------------------------->
 
-<!------------------------------------------------------Carousel---------------------------------------------------->
-<!-- <div id="carousel1" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carousel1" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel1" data-slide-to="1"></li>
-    <li data-target="#carousel1" data-slide-to="2"></li>
-    <li data-target="#carousel1" data-slide-to="3"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images\carousel slide\WhatsApp Image 2024-04-23 at 19.15.12_5e55f216.jpg" class="d-block w-100 img-fluid" alt="1">
-    </div>
-    <div class="carousel-item">
-      <img src="images\carousel slide\WhatsApp Image 2024-04-23 at 19.15.12_de04129a.jpg" class="d-block w-100 img-fluid" alt="2">
-    </div>
-    <div class="carousel-item">
-      <img src="images\carousel slide\WhatsApp Image 2024-04-23 at 19.15.12_de04129a.jpg" class="d-block w-100 img-fluid" alt="3">
-    </div>
-    <div class="carousel-item">
-      <img src="images\carousel slide\WhatsApp Image 2024-04-23 at 19.15.23_80576220.jpg" class="d-block w-100 img-fluid" alt="4">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carousel1" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> -->
 <div class="image-box">
   <img src="images\carousel slide\WhatsApp Image 2024-05-05 at 15.29.28_91aa7e96.jpg" alt="Image description">
   <div class="text-overlay">
@@ -98,9 +53,6 @@
 
 
 <!------------------------------------------------------Carousel---------------------------------------------------->
-<!-- about -->
-  <!-- <p style="background-color: #F0FFFF;">"Hopeshore Special School located at Kadalundi was founded with the noble objective of empowering the children with special needs who are sidelined from the mainstream of society"<a href="aboutus.html">more</a></p> -->
-<!-- about -->
 <!------------------------------------------------------Cards---------------------------------------------------->
 <div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto;"> 
   <div class="row mb-3" >
@@ -108,9 +60,8 @@
       <h4 class="cd-h4 mt-3 mb-3">Our Latest Collections</h4>
       <div class="product-container">
         <div class="product-box">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
+            <img src="images/Products/bg removed/WhatsApp Image 2024-04-23 at 19.23.38_a212a797.png" alt="Product Image 1">
             <div class="product-info">
-                <span class="rating">4.5 <i class="fas fa-star"></i></span>
                 <span class="price">$29.99</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -119,7 +70,6 @@
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
             <div class="product-info">
-                <span class="rating">4.2 <i class="fas fa-star"></i></span>
                 <span class="price">$34.50</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -128,7 +78,6 @@
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
             <div class="product-info">
-                <span class="rating">4.8 <i class="fas fa-star"></i></span>
                 <span class="price">$19.95</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -137,7 +86,6 @@
         <div class="product-box">
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
           <div class="product-info">
-              <span class="rating">4.5 <i class="fas fa-star"></i></span>
               <span class="price">$29.99</span><br>
               <p>##</p>
               <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -152,7 +100,6 @@
         <div class="product-box">
             <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
             <div class="product-info">
-                <span class="rating">4.5 <i class="fas fa-star"></i></span>
                 <span class="price">$29.99</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -161,16 +108,14 @@
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
             <div class="product-info">
-                <span class="rating">4.2 <i class="fas fa-star"></i></span>
                 <span class="price">$34.50</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+            <img src="images/Products/bg removed/WhatsApp Image 2024-04-23 at 19.23.38_6467a58e.png" alt="Product Image 3">
             <div class="product-info">
-                <span class="rating">4.8 <i class="fas fa-star"></i></span>
                 <span class="price">$19.95</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -179,7 +124,6 @@
         <div class="product-box">
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
           <div class="product-info">
-              <span class="rating">4.5 <i class="fas fa-star"></i></span>
               <span class="price">$29.99</span><br>
               <p>##</p>
               <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -209,18 +153,16 @@
       <h4 class="cd-h4 mt-3 mb-3">All Products</h4>
       <div class="product-container">
         <div class="product-box">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" alt="Product Image 1">
+            <img src="images/Products/bg removed/WhatsApp Image 2024-04-22 at 20.30.12_1a6b17e3.png" alt="Product Image 1">
             <div class="product-info">
-                <span class="rating">4.5 <i class="fas fa-star"></i></span>
                 <span class="price">$29.99</span><br>
-                <p>##</p>
+                <p style="font-family: 'Roboto';">wooden vase</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
         <div class="product-box">
             <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_5e8e4650.jpg" alt="Product Image 2">
             <div class="product-info">
-                <span class="rating">4.2 <i class="fas fa-star"></i></span>
                 <span class="price">$34.50</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -229,7 +171,6 @@
         <div class="product-box">
             <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" alt="Product Image 3">
             <div class="product-info">
-                <span class="rating">4.8 <i class="fas fa-star"></i></span>
                 <span class="price">$19.95</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -238,7 +179,6 @@
         <div class="product-box">
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_ad58fd6e.jpg" alt="Product Image 1">
           <div class="product-info">
-              <span class="rating">4.5 <i class="fas fa-star"></i></span>
               <span class="price">$29.99</span><br>
               <p>##</p>
               <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -253,7 +193,6 @@
         <div class="product-box">
             <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_7e51ce81.jpg" alt="Product Image 1">
             <div class="product-info">
-                <span class="rating">4.5 <i class="fas fa-star"></i></span>
                 <span class="price">$29.99</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -262,7 +201,6 @@
         <div class="product-box">
             <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" alt="Product Image 2">
             <div class="product-info">
-                <span class="rating">4.2 <i class="fas fa-star"></i></span>
                 <span class="price">$34.50</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -271,7 +209,6 @@
         <div class="product-box">
             <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" alt="Product Image 3">
             <div class="product-info">
-                <span class="rating">4.8 <i class="fas fa-star"></i></span>
                 <span class="price">$19.95</span><br>
                 <p>##</p>
                 <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -280,7 +217,6 @@
         <div class="product-box">
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" alt="Product Image 1">
           <div class="product-info">
-              <span class="rating">4.5 <i class="fas fa-star"></i></span>
               <span class="price">$29.99</span><br>
               <p>##</p>
               <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
@@ -417,7 +353,7 @@
           <h4>Pages</h4>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#contact" id="#contact">Contact</a></li>
           </ul>
