--- a/aboutus.html
+++ b/aboutus.html
@@ -12,46 +12,32 @@
 </head>
 <body>
   <!------------------------------------------------------Header---------------------------------------------------->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white" style="max-height:70px;z-index:10;">
-        <a class="navbar-brand" href="index.html">
-            <span id="bd-title">
-              <img src="images/Logo page.jpg" alt="Hopeshore Logo">
-            </span>
-          </a>
-        <button id="menu-button">&#9776;</button> 
-        <nav id="side-menu">
-            <button id="close-button">X</button>
-            <!--  Side menu will go here -->
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Palm Flowers.html">Palm Flowers</a></li>
-                <li><a href="#">Graden Flowers</a></li>
-                <li><a href="#">Sticks</a></li>
-                <li><a href="#">Wall Hanging</a></li>
-                <li><a href="#">Books</a></li>
-                <li><a href="#">flower basket</a></li>
-                <li><a href="#">deco rose</a></li>
-                <li><a href="#">bamboo</a></li>
-                <li><a href="#">Offer Zone</a></li>
-                <li><a href="aboutus.html">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-white" style="max-height:70px;z-index:10;">
+    <a class="navbar-brand" href="index.html">
+      <span id="bd-title">
+        <img src="images/Logo 2.png" alt="Hopeshore Logo" style="height: 35px;" >
+      </span>
+    </a>
+      <button id="menu-button">&#9776;</button> 
+      <nav id="side-menu">
+          <button id="close-button">X</button>
+          <!--  Side menu will go here -->
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="Palm Flowers.html">Products</a></li>
+              <li><a href="#">Offers</a></li>
+              <li><a href="aboutus.html">About Us</a></li>
+          </ul>
       </nav>
-      <nav class="nav2">
-        <ul class="ul2">
-            <li id="one"><a href="Palm Flowers.html">Palm Flowers</a></li>
-            <li id="two"><a href="mobiles.html">Graden Flowers</a></li>
-            <li id="three"><a href="laptops.html">Sticks</a></li>
-            <li id="four"><a href="#">Wall Hanging</a></li>
-            <li id="five"><a href="#">Books</a></li>
-            <li id="six"><a href="#">flower basket</a></li>
-            <li id="seven"><a href="#">deco rose</a></li>
-            <li id="eight"><a href="#">bamboo</a></li>
-            <li id="nine"><a href="#">Offer Zone</a></li>
-        </ul>
-      </nav>
+    </nav>
+    <nav class="nav2">
+      <ul class="ul2">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Palm Flowers.html">Products</a></li>
+        <li><a href="#">Offers</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+      </ul>
+    </nav>
 <!------------------------------------------------------Header---------------------------------------------------->
 <h3 class="navbar-brand" href="i"><span id="bd-title"><img src="images/Logo page.jpg" style="max-height:50px;max-width: fit-content;"></span></h3>
 <p>Hopeshore Special School located at Kadalundi was founded with the noble objective 
@@ -77,6 +63,7 @@
     <div class="container">
         <div class="text-content">
             <h2>Psychology</h2>
+            <img src="images/Album/IMG_0233.JPG" alt="Image description"  >
             <p>Clinical child psychologists are 
                 primarily specialized in understanding 
                 the basic psychological needs of children 
@@ -86,7 +73,6 @@
                 behavioral adaptation and health status.</p>
         </div>
         <div class="image-container">
-            <img src="images/Logo 2.png" alt="Hopeshore Logo" style="height: 35px;" >
             <p></p>
         </div>
     </div>
@@ -94,11 +80,12 @@
     <!-- -----------------------------------------------Special Education---------------------------------------->
     <div class="container">
         <div class="image-container">
-            <img src="images/Album/IMG_0233.JPG" alt="Image description">
+            
             <p></p>
         </div>
         <div class="text-content">
             <h2>Special Education</h2>
+            <img src="images/Album/IMG_0233.JPG" alt="Image description">
             <p>Special Education focuses 
                 on systematically monitored 
                 teaching procedures with adapted 
@@ -113,6 +100,7 @@
     <div class="container">
         <div class="text-content">
             <h2>Physio Therapy</h2>
+            <img src="images/Album/IMG_0233.JPG" alt="Image description">
             <p>Pediatric physiotherapy deals with the 
                 treatment of children who need range of motion, 
                 strength, coordination, postural control, quality of 
@@ -128,7 +116,6 @@
                 making them more independent.</p>
         </div>
         <div class="image-container">
-            <img src="images/Album/IMG_0233.JPG" alt="Image description">
             <p></p>
         </div>
     </div>
@@ -136,11 +123,11 @@
     <!--------------------------------------------------Speech Therapy------------------------------------------->
     <div class="container">
         <div class="image-container">
-            <img src="images/Album/IMG_0233.JPG" alt="Image description">
             <p></p>
         </div>
         <div class="text-content">
             <h2>Speech Therapy</h2>
+            <img src="images/Album/IMG_0233.JPG" alt="Image description">
             <p>Speech-language therapy helps to 
                 coordinate the mechanics of speech with the 
                 social use of language. Speech therapy focuses 
@@ -157,6 +144,7 @@
     <div class="container">
         <div class="text-content">
             <h2>Occupational Therapy</h2>
+            <img src="images/Album/IMG_0233.JPG" alt="Image description">
             <p>Occupational Therapy’s (OT) primary 
                 goal is to assist children and adolescents to 
                 reach their individual potential while participating in daily life routines at home, school and 
@@ -167,66 +155,55 @@
                 whether they are physical or sensory based</p>
         </div>
         <div class="image-container">
-            <img src="images/Album/IMG_0233.JPG" alt="Image description">
             <p></p>
         </div>
     </div>
     <!--------------------------------------------------Occupational Therapy-------------------------------------->
 <!------------------------------------------------------Footer---------------------------------------------------->
-<footer class="footdes">
-    <div class="container-fluid footer-1">
-        <div class="row">
-          <div class="col-sm-4 foocol">
-            <h4 class="text-white fh4">About Us</h4>
-            <p class="text-white">"Hopeshore Special School located at Kadalundi was founded with the noble objective 
-                of empowering the children with special needs who are sidelined from the mainstream of 
-                society. The school provides education and therapy to specially-abled children hailing from 
-                the lower socio-economic groups. The team at Hopeshore is very supportive and sensitive 
-                to the needs of an alarming number of children with special needs who are the victims of 
-                negligence. Such children are doubly disadvantaged due to the lack of parental awareness 
-                about their needs, social stigma and poor financial access to special education and therapy. <a href="aboutus.html">more</a>" </p>
-           </div>
-          <div class="col-sm-4 foocol">
-            <h4 class="text-white fh4">Categories</h4>
-            <i class="text-white" > <a href="Palm Flowers.html" style="text-decoration: none; list-style:none; display:inline-block;">Palm Flowers</a></i> <br />
-            <i class="text-white" > <a href="mobiles.html" style="text-decoration: none; list-style:none; display:inline-block;">Graden Flowers</a></i> <br />
-            <i class="text-white" > <a href="laptops.html" style="text-decoration: none; list-style:none; display:inline-block;">Sticks</a></i> <br />
-            <i class="text-white" > <a href="#" style="text-decoration: none; list-style:none; display:inline-block;">Wall Hanging</a></i> <br />
-            <i class="text-white" > <a href="#" style="text-decoration: none; list-style:none; display:inline-block;">Books</a></i> <br />
-            <i class="text-white" > <a href="#" style="text-decoration: none; list-style:none; display:inline-block;">flower basket</a></i> <br />
-            <i class="text-white" > <a href="#" style="text-decoration: none; list-style:none; display:inline-block;">deco rose</a></i> <br />
-            <i class="text-white" > <a href="#" style="text-decoration: none; list-style:none; display:inline-block;">bamboo</a></i>  <br />
-            <i class="text-white" > <a href="#" style="text-decoration: none; list-style:none; display:inline-block;">Offer Zone</a></i> <br />
-          </div>
-          <div class="col-sm-4 foocol">
-            <h4 class="text-white fh4">Contact Us</h4>
-            <span style="color:antiquewhite; text-transform:uppercase;">Address:</span><span class="text-white"> Hopeshore Anangadi - Chaliyam Rd, Kadalundi, Kozikode, Kerala 673302</span><br />
-            <i class="fas fa-envelope text-white" ></i> <span style="color:antiquewhite; text-transform:uppercase;">Mail:</span><span class="text-white" style="overflow-wrap: break-word;">hopeshore.in@gmail.com</span><br />
-            <i class="fas fa-phone-alt text-white" ></i> <span style="color:antiquewhite; text-transform:uppercase;">Telephone:</span><span class="text-white"> (+91)8074786868</span> <br />
-            <br />
-            <br />
-            <pc class="text-white">For any quries please contact us via <a href="mailto:hopeshore.in@gmail.com">mail</a> or phone.</p>
-          </div>
-        </div>
-        <div class="row">
-            <div class="footer-2 col-sm foocol-2">
-                <div class="footer-2-div">
-                <a href="https://www.facebook.com/HopeShoreKadalundi?mibextid=kFxxJD"><i class="fab fa-facebook text-white"></i></a>
-                <a href="https://x.com/HopeshoreIn?t=oJVwRHd3RBivepdB2pIB2w&s=09"><i class="fas fa-times text-white"></i></a>
-                <a href="https://www.linkedin.com"><i class="fab fa-linkedin-in text-white"></i></a>
-                <a href="https://www.instagram.com/hopeshore_?igsh=d250enp1dTV2djFr&utm_source=qr"><i class="fab fa-instagram text-white"></i></a>
-                <a class="text-white" style="float:right; margin-right:05px;">&copy;2024 by hopeshore.powered and secured by CODE CORNS digital  </a>
-                
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
 <!------------------------------------------------------Footer---------------------------------------------------->
-
-
-<script src="node_modules\jquery\dist\jquery.min.js"></script>
-<script src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
-<script src="js/Script.js"></script>
-</body>
-</html>
+<footer>
+    <footer class="footer">
+      <div class="footer-container">
+        <!-- <div class="footer-logo">
+          <img src="images/Logo 2.png" alt="Company Logo">
+        </div> -->
+        <div class="footer-info">
+          <div class="footer-about">
+            <!-- <p>A few lines describing your company or website.</p> -->
+          </div>
+          <div class="footer-links">
+            <h4>Pages</h4>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutus.html">About Us</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#contact" id="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-contact">
+          <h4>Contact Us</h4>
+          <p>
+            <a href="mailto:hopeshore.in@gmail.com">hopeshore.in@gmail.com</a><br>
+            <a href="tel:+918074786868">+918074786868</a>
+          </p>
+        </div>
+      </div>
+      <div class="footer-social">
+        <a href="https://www.facebook.com/HopeShoreKadalundi?mibextid=kFxxJD"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://x.com/HopeshoreIn?t=oJVwRHd3RBivepdB2pIB2w&s=09"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/hopeshore_?igsh=d250enp1dTV2djFr&utm_source=qr"><i class="fab fa-instagram"></i></a>
+      </div>
+      <div class="footer-copyright">
+        <p>&copy; Copyright 2024 by hopeshore.powered and secured by CODE CORNS digital</p>
+      </div>
+    </footer>
+  </footer>
+  <!------------------------------------------------------Footer---------------------------------------------------->
+  
+  
+  <script src="node_modules\jquery\dist\jquery.js"></script>
+  <script src="node_modules\bootstrap\dist\js\bootstrap.js"></script>
+  <script src="js/Script.js"></script>
+  </body>
+  </html>
