--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <!------------------------------------------------------Header---------------------------------------------------->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white" style="max-height:70px;z-index:10;">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-white" style="max-height:70px;z-index:10;">
       <a class="navbar-brand" href="index.html">
         <span id="bd-title">
           <img src="images/Logo 2.png" alt="Hopeshore Logo" style="height: 35px;" >
@@ -25,7 +25,7 @@
         <nav id="side-menu">
             <button id="close-button">X</button>
             <!--  Side menu will go here -->
-            <ul>
+        <!--    <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Palm Flowers.html">Products</a></li>
                 <li><a href="#">Offers</a></li>
@@ -40,7 +40,28 @@
           <li><a href="#">Offers</a></li>
           <li><a href="aboutus.html">About Us</a></li>
         </ul>
-      </nav>
+      </nav> -->
+      <header>
+        <a class="navbar-brand" href="index.html">
+          <span id="bd-title">
+            <img src="images/Logo 2.png" alt="Hopeshore Logo" style="height: 35px;" >
+          </span>
+        </a>
+        <nav>
+          <a href="#" style=" color: #000;">Home</a>
+          <a href="#" style=" color: #000;">Products</a>
+          <a href="#" style=" color: #000;">Offers</a>
+          <a href="#" style=" color: #000;">About us</a>
+          <a href="#" style=" color: #000;">Contact Us</a>
+        </nav>
+        <button id="menu-toggle" class="menu-toggle">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
+      </header>
+      
+      
 <!------------------------------------------------------Header---------------------------------------------------->
 
 <div class="image-box">
@@ -342,28 +363,28 @@
 <footer>
   <footer class="footer">
     <div class="footer-container">
-      <!-- <div class="footer-logo">
-        <img src="images/Logo 2.png" alt="Company Logo">
-      </div> -->
+      <div class="footer-logo">
+        <img src="images/Logo 2.png" alt="Company Logo" style="height: auto; ">
+      </div>
       <div class="footer-info">
         <div class="footer-about">
-          <!-- <p>A few lines describing your company or website.</p> -->
+          <p>A few lines describing your company or website.A few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or website</p>
         </div>
         <div class="footer-links">
           <h4>Pages</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#contact" id="#contact">Contact</a></li>
+            <li><a href="index.html" style=" color: #000;">Home</a></li><br>
+            <li><a href="aboutus.html" style=" color: #000;">About Us</a></li><br>
+            <li><a href="#" style=" color: #000;">Services</a></li><br>
+            <li><a href="#contact" id="#contact" style=" color: #000;">Contact</a></li>
           </ul>
         </div>
       </div>
       <div class="footer-contact">
         <h4>Contact Us</h4>
         <p>
-          <a href="mailto:hopeshore.in@gmail.com">hopeshore.in@gmail.com</a><br>
-          <a href="tel:+918074786868">+918074786868</a>
+          <a href="mailto:hopeshore.in@gmail.com" style=" color: #000;">hopeshore.in@gmail.com</a><br>
+          <a href="tel:+918074786868" style=" color: #000;">+918074786868</a>
         </p>
       </div>
     </div>
