modify the about as and products pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,53 +12,33 @@
 </head>
 <body>
   <!------------------------------------------------------Header---------------------------------------------------->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white" style="max-height:70px;z-index:10;">
+  <header>
     <a class="navbar-brand" href="index.html">
       <span id="bd-title">
         <img src="images/Logo 2.png" alt="Hopeshore Logo" style="height: 35px;" >
       </span>
     </a>
-      <button id="menu-button">&#9776;</button> 
-      <nav id="side-menu">
-          <button id="close-button">X</button>
-          <!--  Side menu will go here -->
-          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="Palm Flowers.html">Products</a></li>
-              <li><a href="#">Offers</a></li>
-              <li><a href="aboutus.html">About Us</a></li>
-          </ul>
-      </nav>
+    <nav>
+      <a href="index.html" style=" color: #000;">Home</a>
+      <a href="Products.html" style=" color: #000;">Products</a>
+      <a href="#" style=" color: #000;">Offers</a>
+      <a href="aboutus.html" style=" color: #000;">About us</a>
+      <a href="#" style=" color: #000;">Contact Us</a>
     </nav>
-    <nav class="nav2">
-      <ul class="ul2">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Palm Flowers.html">Products</a></li>
-        <li><a href="#">Offers</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
-      </ul>
-    </nav>
+    <button id="menu-toggle" class="menu-toggle">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
+  </header>
 <!------------------------------------------------------Header---------------------------------------------------->
-<h3 class="navbar-brand" href="i"><span id="bd-title"><img src="images/Logo page.jpg" style="max-height:50px;max-width: fit-content;"></span></h3>
-<p>Hopeshore Special School located at Kadalundi was founded with the noble objective 
-    of empowering the children with special needs who are sidelined from the mainstream of 
-    society. The school provides education and therapy to specially-abled children hailing from 
-    the lower socio-economic groups. The team at Hopeshore is very supportive and sensitive 
-    to the needs of an alarming number of children with special needs who are the victims of 
-    negligence. Such children are doubly disadvantaged due to the lack of parental awareness 
-    about their needs, social stigma and poor financial access to special education and therapy. 
-    </p>
-    <p>Hopeshore Charitable Trust is a nononprofit organisation dedicated to the rehabilitation 
-        of the children with special needs. The trust aims at enabling these children to lead a dignified 
-        life by catering to their special needs. It has proposed to take up various charitable initiatives 
-        to provide services to such children and prevent apathy towards them.</p>
-    <p>
-    Hopeshore Special School is at the service of children with a wide range of disabilities 
-    such as Cerebral Palsy, Autism, mental retardation, learning disability, Attention deficit 
-    disorder, Behaviour disorder, speech and language disorders etc. We at Hopeshore offer 
-    complete range of clinical services from pediatric assessment to therapies. Education and 
-    therapies like occupational therapy, speech therapy, psychotherapy, physiotherapy and 
-    remedial education are provided completely free of cost for underprivileged children.</p>
+<h3 class="navbar-brand" href="i"><span id="bd-title"><img src="images/Logo page.jpg" style="max-height:50px;max-width: fit-content; text-align: center;"></span></h3>
+<div id="about-para">
+  <p>Hopeshore Special School located at Kadalundi was founded with the noble objective of empowering the children with special needs who are sidelined from the mainstream of society. The school provides education and therapy to specially-abled children hailing from the lower socio-economic groups. The team at Hopeshore is very supportive and sensitive to the needs of an alarming number of children with special needs who are the victims of negligence. Such children are doubly disadvantaged due to the lack of parental awareness about their needs, social stigma and poor financial access to special education and therapy.</p>
+  <p>Hopeshore Charitable Trust is a non-profit organization dedicated to the rehabilitation of children with special needs. The trust aims at enabling these children to lead a dignified life by catering to their special needs. It has proposed to take up various charitable initiatives to provide services to such children and prevent apathy towards them.</p>
+  <p>Hopeshore Special School is at the service of children with a wide range of disabilities such as Cerebral Palsy, Autism, mental retardation, learning disability, Attention deficit disorder, Behaviour disorder, speech and language disorders etc. We at Hopeshore offer a complete range of clinical services from pediatric assessment to therapies. Education and therapies like occupational therapy, speech therapy, psychotherapy, physiotherapy and remedial education are provided completely free of cost for underprivileged children.</p>
+</div>
+
     <!---------------------------------------------------Psychology---------------------------------------------->
     <div class="container">
         <div class="text-content">
