--- a/index.html
+++ b/index.html
@@ -15,51 +15,25 @@
 </head>
 <body>
   <!------------------------------------------------------Header---------------------------------------------------->
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-white" style="max-height:70px;z-index:10;">
-      <a class="navbar-brand" href="index.html">
-        <span id="bd-title">
-          <img src="images/Logo 2.png" alt="Hopeshore Logo" style="height: 35px;" >
-        </span>
-      </a>
-        <button id="menu-button">&#9776;</button> 
-        <nav id="side-menu">
-            <button id="close-button">X</button>
-            <!--  Side menu will go here -->
-        <!--    <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Palm Flowers.html">Products</a></li>
-                <li><a href="#">Offers</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
-            </ul>
-        </nav>
-      </nav>
-      <nav class="nav2">
-        <ul class="ul2">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Palm Flowers.html">Products</a></li>
-          <li><a href="#">Offers</a></li>
-          <li><a href="aboutus.html">About Us</a></li>
-        </ul>
-      </nav> -->
-      <header>
-        <a class="navbar-brand" href="index.html">
-          <span id="bd-title">
-            <img src="images/Logo 2.png" alt="Hopeshore Logo" style="height: 35px;" >
-          </span>
-        </a>
-        <nav>
-          <a href="#" style=" color: #000;">Home</a>
-          <a href="#" style=" color: #000;">Products</a>
-          <a href="#" style=" color: #000;">Offers</a>
-          <a href="#" style=" color: #000;">About us</a>
-          <a href="#" style=" color: #000;">Contact Us</a>
-        </nav>
-        <button id="menu-toggle" class="menu-toggle">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </button>
-      </header>
+  <header>
+    <a class="navbar-brand" href="index.html">
+      <span id="bd-title">
+        <img src="images/Logo 2.png" alt="Hopeshore Logo" style="height: 35px;" >
+      </span>
+    </a>
+    <nav>
+      <a href="index.html" style=" color: #000;">Home</a>
+      <a href="Products.html" style=" color: #000;">Products</a>
+      <a href="#" style=" color: #000;">Offers</a>
+      <a href="aboutus.html" style=" color: #000;">About us</a>
+      <a href="#" style=" color: #000;">Contact Us</a>
+    </nav>
+    <button id="menu-toggle" class="menu-toggle">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
+  </header>
       
       
 <!------------------------------------------------------Header---------------------------------------------------->
