change the footer about

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
       </div>
       <div class="footer-info">
         <div class="footer-about">
-          <p>A few lines describing your company or website.A few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or websiteA few lines describing your company or website</p>
+          <p>Hopeshore Special School located at Kadalundi was founded with the noble objective of empowering the children with special needs who are sidelined from the mainstream of society. The school provides education and therapy to specially-abled children hailing from the lower socio-economic groups. The team at Hopeshore is very supportive and sensitive to the needs of an alarming number of children with special needs who are the victims of negligence. Such children are doubly disadvantaged due to the lack of parental awareness about their needs, social stigma and poor financial access to special education and therapy.</p>
         </div>
         <div class="footer-links">
           <h4>Pages</h4>
