--- a/Products.html
+++ b/Products.html
@@ -197,43 +197,43 @@
   <!------------------------------------------------------Product row2---------------------------------------------------->
 <!------------------------------------------------------Footer---------------------------------------------------->
 <footer>
-    <footer class="footer">
-      <div class="footer-container">
-        <!-- <div class="footer-logo">
-          <img src="images/Logo 2.png" alt="Company Logo">
-        </div> -->
-        <div class="footer-info">
-          <div class="footer-about">
-            <!-- <p>A few lines describing your company or website.</p> -->
-          </div>
-          <div class="footer-links">
-            <h4>Pages</h4>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="aboutus.html">About Us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#contact" id="#contact">Contact</a></li>
-            </ul>
-          </div>
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-logo">
+        <img src="images/Logo 2.png" alt="Company Logo" style="height: auto; ">
+      </div>
+      <div class="footer-info">
+        <div class="footer-about">
+          <p>Hopeshore Special School located at Kadalundi was founded with the noble objective of empowering the children with special needs who are sidelined from the mainstream of society. The school provides education and therapy to specially-abled children hailing from the lower socio-economic groups. The team at Hopeshore is very supportive and sensitive to the needs of an alarming number of children with special needs who are the victims of negligence. Such children are doubly disadvantaged due to the lack of parental awareness about their needs, social stigma and poor financial access to special education and therapy.</p>
         </div>
-        <div class="footer-contact">
-          <h4>Contact Us</h4>
-          <p>
-            <a href="mailto:hopeshore.in@gmail.com">hopeshore.in@gmail.com</a><br>
-            <a href="tel:+918074786868">+918074786868</a>
-          </p>
+        <div class="footer-links">
+          <h4>Pages</h4>
+          <ul>
+            <li><a href="index.html" style=" color: #000;">Home</a></li><br>
+            <li><a href="aboutus.html" style=" color: #000;">About Us</a></li><br>
+            <li><a href="#" style=" color: #000;">Services</a></li><br>
+            <li><a href="#contact" id="#contact" style=" color: #000;">Contact</a></li>
+          </ul>
         </div>
       </div>
-      <div class="footer-social">
-        <a href="https://www.facebook.com/HopeShoreKadalundi?mibextid=kFxxJD"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://x.com/HopeshoreIn?t=oJVwRHd3RBivepdB2pIB2w&s=09"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/hopeshore_?igsh=d250enp1dTV2djFr&utm_source=qr"><i class="fab fa-instagram"></i></a>
+      <div class="footer-contact">
+        <h4>Contact Us</h4>
+        <p>
+          <a href="mailto:hopeshore.in@gmail.com" style=" color: #000;">hopeshore.in@gmail.com</a><br>
+          <a href="tel:+918074786868" style=" color: #000;">+918074786868</a>
+        </p>
       </div>
-      <div class="footer-copyright">
-        <p>&copy; Copyright 2024 by hopeshore.powered and secured by CODE CORNS digital</p>
-      </div>
-    </footer>
+    </div>
+    <div class="footer-social">
+      <a href="https://www.facebook.com/HopeShoreKadalundi?mibextid=kFxxJD"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://x.com/HopeshoreIn?t=oJVwRHd3RBivepdB2pIB2w&s=09"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.instagram.com/hopeshore_?igsh=d250enp1dTV2djFr&utm_source=qr"><i class="fab fa-instagram"></i></a>
+    </div>
+    <div class="footer-copyright">
+      <p>&copy; Copyright 2024 by hopeshore.powered and secured by CODE CORNS digital</p>
+    </div>
   </footer>
+</footer>
   <!------------------------------------------------------Footer---------------------------------------------------->
   
   
